# kolokolnya

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  todo.diff  update.sh
configs/: app.nginx
kolokolnya/: settings.py  urls.py
shop/: models.py  views.py
shop/migrations/: 0001_initial.py
src/: entrypoint-worker.sh  entrypoint.sh  entrypoint_dev.sh
src/apps/Blog/: admin.py  apps.py  models.py  views.py
src/apps/blog/: admin.py  apps.py  forms.py  models.py  views.py
src/apps/shop/: admin.py  forms.py  models.py  payment.py  serializer.py  services.py  views.py
src/apps/users/: admin.py  forms.py  managers.py  models.py  services.py  views.py
src/apps/utils/: admin.py  apps.py  context_processor.py  models.py  (+3 more)
src/main/: asgi.py  settings.py  urls.py  wsgi.py
src/tasks/: __init__.py  payment_tasks.py
src/templates/: add_article.html  add_item.html  attractions.html  base-index.html  base.html  blog-full.html  blog-single-full.html  blog.html  completed_carts.html  contact.html  detail.html  edit_user_info.html  footer.html  head-panel.html  history.html  home.html  index.html  login.html  main-menu.html  make_order.html  old-base.html  order_detail.html  orders_history.html  pagination.html  pay.html  payed_carts.html  payment-success.html  prefs.html  product_detail.html  profile.html  records.html  register.html  root.html  search-test.html  search_results.html  shop-account-login.html  shop-cart.html  shop.html  sidebar.html  sort.html  (+3 more)
templates/: base.html
(+37 files in other folders)
